--- a/index.html
+++ b/index.html
@@ -7,5 +7,90 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <!-- header -->
+      <header>
+        <!-- logo -->
+        <a href="index.html"><span>Web</span>Studio</a>
+        <nav>
+          <ul>
+            <li>Студия</li>
+            <li>Портфолио</li>
+            <li>Контакты</li>
+          </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </header>
+      <!-- main -->
+      <main>
+        <div>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <p><strong>Внимание к деталям</strong></p>
+              <p>
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <p><strong>Пунктуальность</strong></p>
+              <p>
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <p><strong>Планирование</strong></p>
+              <p>
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+          </ul>
+          <h2>Чем мы занимаемся</h2>
+          <img src="./images/img(1).jpg" alt="печатает на клавиатуре" width="370" height="294" />
+          <img src="./images/img (2).jpg" alt="телефон и ноутбук" width="370" height="294" />
+          <img src="./images/img (3).jpg" alt="палитра цветов на айпаде" width="370" height="294" />
+          <h2>Наша команда</h2>
+          <div>
+            <ul>
+              <li>
+                <img src="./images/img(person 1) (1).jpg" alt="мужчина" width="810" height="780" />
+                <p>Игорь Демьяненко</p>
+                <p>Product Designer</p>
+              </li>
+              <li>
+                <img src="./images/img(person 2) (1).jpg" alt="женщина" width="810" height="780" />
+                <p>Ольга Репина</p>
+                <p>Frontend Developer</p>
+              </li>
+              <li>
+                <img src="./images/img (person 3) (1).jpg" alt="мужчина" width="810" height="780" />
+                <p>Николай Тарасов</p>
+                <p>Marketing</p>
+              </li>
+              <li>
+                <img src="./images/img (person 4) (1).jpg" alt="мужчина" width="810" height="780" />
+                <p>Михаил Ермаков</p>
+                <p>UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </main>
+      <!-- footer -->
+      <footer>
+        <!-- logo -->
+        <a href="index.html"><span>Web</span>Studio</a>
+        <address>
+          г. Киев, пр-т Леси Украинки, 26 <br />
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        </address>
+      </footer>
+    </div>
+  </body>
 </html>
