--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,24 +12,29 @@
       <!-- header -->
       <header>
         <!-- logo -->
-        <a href="index.html"><span>Web</span>Studio</a>
-        <nav>
-          <ul>
-            <li>Студия</li>
-            <li>Портфолио</li>
-            <li>Контакты</li>
-          </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        <section>
+          <a href="index.html" lang="en">Web<span>Studio</span></a>
+          <nav>
+            <ul>
+              <li><a href="">Студия</a></li>
+              <li><a href="">Портфолио</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </section>
       </header>
       <!-- main -->
       <main>
-        <div>
-          <h1>Эффективные решения для вашего бизнеса</h1>
+        <section>
+          <h1>
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
           <button type="button">Заказать услугу</button>
-        </div>
-        <div>
+        </section>
+        <section>
           <ul>
             <li>
               <p><strong>Внимание к деталям</strong></p>
@@ -50,45 +55,49 @@
               </p>
             </li>
           </ul>
+        </section>
+        <section>
           <h2>Чем мы занимаемся</h2>
           <img src="./images/img(1).jpg" alt="печатает на клавиатуре" width="370" height="294" />
           <img src="./images/img (2).jpg" alt="телефон и ноутбук" width="370" height="294" />
           <img src="./images/img (3).jpg" alt="палитра цветов на айпаде" width="370" height="294" />
+        </section>
+        <section>
           <h2>Наша команда</h2>
-          <div>
-            <ul>
-              <li>
-                <img src="./images/img(person 1) (1).jpg" alt="мужчина" width="810" height="780" />
-                <p>Игорь Демьяненко</p>
-                <p>Product Designer</p>
-              </li>
-              <li>
-                <img src="./images/img(person 2) (1).jpg" alt="женщина" width="810" height="780" />
-                <p>Ольга Репина</p>
-                <p>Frontend Developer</p>
-              </li>
-              <li>
-                <img src="./images/img (person 3) (1).jpg" alt="мужчина" width="810" height="780" />
-                <p>Николай Тарасов</p>
-                <p>Marketing</p>
-              </li>
-              <li>
-                <img src="./images/img (person 4) (1).jpg" alt="мужчина" width="810" height="780" />
-                <p>Михаил Ермаков</p>
-                <p>UI Designer</p>
-              </li>
-            </ul>
-          </div>
-        </div>
+          <ul>
+            <li>
+              <img src="./images/img(person1)(1).jpg" alt="мужчина" width="810" height="780" />
+              <h3>Игорь Демьяненко</h3>
+              <p lang="en">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/img(person2)(1).jpg" alt="женщина" width="810" height="780" />
+              <h3>Ольга Репина</h3>
+              <p lang="en">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/img(person3)(1).jpg" alt="мужчина" width="810" height="780" />
+              <h3>Николай Тарасов</h3>
+              <p lang="en">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img(person4)(1).jpg" alt="мужчина" width="810" height="780" />
+              <h3>Михаил Ермаков</h3>
+              <p lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </section>
       </main>
       <!-- footer -->
       <footer>
         <!-- logo -->
-        <a href="index.html"><span>Web</span>Studio</a>
+        <a href="index.html">Web<span>Studio</span></a>
         <address>
-          г. Киев, пр-т Леси Украинки, 26 <br />
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+          <ul>
+            <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
         </address>
       </footer>
     </div>
