заменил заголовки в списке

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         <section>
           <ul>
             <li>
-              <p><strong>Внимание к деталям</strong></p>
+              <h2><strong>Внимание к деталям</strong></h2>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li>
-              <p><strong>Пунктуальность</strong></p>
+              <h2><strong>Пунктуальность</strong></h2>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li>
-              <p><strong>Планирование</strong></p>
+              <h2><strong>Планирование</strong></h2>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
@@ -59,8 +59,8 @@
         <section>
           <h2>Чем мы занимаемся</h2>
           <img src="./images/img(1).jpg" alt="печатает на клавиатуре" width="370" height="294" />
-          <img src="./images/img (2).jpg" alt="телефон и ноутбук" width="370" height="294" />
-          <img src="./images/img (3).jpg" alt="палитра цветов на айпаде" width="370" height="294" />
+          <img src="./images/img(2).jpg" alt="телефон и ноутбук" width="370" height="294" />
+          <img src="./images/img(3).jpg" alt="палитра цветов на айпаде" width="370" height="294" />
         </section>
         <section>
           <h2>Наша команда</h2>
