заменил секцию на див

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- header -->
       <header>
         <!-- logo -->
-        <section>
+        <div>
           <a href="index.html" lang="en">Web<span>Studio</span></a>
           <nav>
             <ul>
@@ -23,7 +23,7 @@
           </nav>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </section>
+        </div>
       </header>
       <!-- main -->
       <main>
