--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img src="./images/img(2).jpg" alt="телефон и ноутбук" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/img(3).jpg" alt="палитра цветов" width="370" height="294" />
+            <img src="./images/img(3).jpg" alt="палитра цветов айпад" width="370" height="294" />
           </li>
         </ul>
       </section>
